--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>Nice Gadgets Store</title>
+  <link rel="icon" type="image/svg+xml" href="https://denlysiak.github.io/react_nice_gadget_store/logos/main_logo.svg">
 </head>
   <body>
     <div id="root"></div>
